<resources>
    <string name="app_name">FieldNote</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Field Note</string>

    <!-- Menu principal -->
    <string name="my_fields">Meus Campos\n</string>
    <string name="entries">Registo \n de Entradas</string>
    <string name="register_feno">Estados \n Fenológicos</string>
    <string name="obs_organism">Observações \n de Organismos</string>
    <string name="tec_intervention">Intervenções \nTécnicas</string>
    <string name="statistics">Estatisticas \n</string>
    <string name="longo">"texto muito longo que \nnão cabe apenas numa linha"</string>


    <!-- Registo Entradas -->
    <string name="data_registo">Data do Registo</string>
    <string name="produto">Produto</string>
    <string name="fornecedor">Fornecedor</string>
    <string name="fabricante">Fabricante</string>
    <string name="quantidade">Quantidade</string>
    <string name="observacoes">Observações</string>

    <string name="just_data">Data</string>
    <string name="sub_entrada">Adicione uma nova entrada</string>

    <!-- Registo Nova Entradas -->
    <string name="data_exemplo">dd-mm-yyyy</string>
    <string name="nome_produto">Nome do Produto</string>
    <string name="custo_total">Custo Total</string>
    <string name="nome_fornecedor">Nome do Fornecedor</string>
    <string name="nome_fabricante">Nome do Fabricante</string>
    <string name="observacoes_entrada">adicione alguma informação</string>

    <!-- Meus Campos  -->
    <string name="zones">Zonas</string>
    <string name="portions">Parcelas</string>
    <string name="campaigns">Campanhas</string>
    <string name="enemies">Inimigos/Pragas</string>
    <string name="fenologic">Estados Fenológicos</string>
    <string name="harvest">Colheitas</string>
    <string name="products_used">Produtos Utilizados</string>
    <string name="make_cc">Produzir \nCaderno Campo</string>


    <!-- Zonas -->
    <string name="localizacao">Localização</string>
    <string name="n_parcelas"># Parcelas</string>
    <string name="add_zona">Adicione uma nova zona</string>
    <string name="nome_zona">Nome da Zona</string>
    <string name="fitossanidade">Fitossanidade</string>
    <string name="modo_producao">Modo de Produção</string>
    <string name="text_solo">Textura do Solo</string>
    <string name="area_total">Área Total</string>
    <string name="parcelas">Parcelas</string>
    <string name="add_parcela">Adicionar Parcela</string>



    <!-- Menu Parcelas -->
    <string name="parcela">Parcela</string>
    <string name="zona">Zona</string>
    <string name="area">Área</string>
    <string name="fertilizacao">Fertilização</string>
    <string name="rega">Tipo de Rega</string>
    <string name="data_plantacao">Data Plantação</string>
    <string name="cultura">Cultura</string>

    <!-- registar nova parcela -->
    <string name="sub_title">Preencha os dados da parcela</string>
    <string name="nome_parcela">Nome da Parcela</string>
    <string name="hint_valor">Valor</string>
    <string name="submeter">Confirmar</string>





    <!-- Menus -->
    <string name="title_activity_my_fields">Meus Campos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registo_entradas">Registo de Entradas</string>
    <string name="title_activity_estatisticas">Estatisticas</string>
    <string name="title_activity_intervencao_tecnica">Intervenções Técnicas</string>
    <string name="title_activity_organismos">Observações de Organismos</string>
    <string name="title_activity_registar_estado">Registar novo estado</string>
    <string name="main_menu">Menu Principal</string>

    <!-- Intervenções Técnicas -->
    <string name="registar_intervencao_tecnica">Nova Intervenção Técnica</string>
    <string name="justificacao">Justificação da Intervenção</string>
    <string name="label_data">Data</string>
    <string name="Estimativa">Estimativa de Risco:</string>
    <string name="Cultural">Oper. Cultural Cont. Infestantes:</string>
    <string name="Irrigacao">Irrigação Fertirrigação:</string>
    <string name="Fertilização">Fertilização:</string>
    <string name="Tratamento">Tratamento Fitossanitário:</string>
    <string name="Vendas">Produção e Vendas:</string>
    <string name="Visitas">Visitas e Intervenientes:</string>


    <!-- Organismos e estados -->
    <string name="title_activity_mostrar_organismos">Observações de Organismos</string>
    <string name="title_activity_mostrar_estado">EstadoActivity</string>
    <string name="title_activity_estados_fenologicos">Estados Fenológicos</string>
    <string name="estado_fenologico_atual">Estado fenológico atual</string>
    <string name="cronologia_estados">Cronologia de estados registados</string>
    <string name="registar_nova_observacao">Registar nova Observação</string>
    <string name="title_activity_campanhas">Campanhas</string>
    <string name="title_activity_registar_campanha">Registar nova Campanha</string>

    <string name="title_activity_registar_nova_entrada">Nova Entrada</string>
    <string name="title_activity_zonas">As Minhas Zonas</string>
    <string name="registar_nova_zonas">Adicionar Nova Zona</string>
    <string name="title_activity_parcelas">As Minhas Parcelas</string>

    <string name="registar_nova_parcela">Adicionar Nova Parcela</string>

    <!-- Overflow menu -->
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="ajuda">Ajuda</string>
    <string name="tutorial">Tutorial</string>
    <string name="sair">Terminar Sessão</string>

    <!-- Extras -->
    <string name="exemplo">default</string>
    <string name="tempo">Temperatura</string>
    <string name="cidade">Cidade</string>
    <string name="loading">Aguardando...</string>


</resources>
