<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.diogo.fieldnote.RegistarNovaEntrada"
    tools:showIn="@layout/activity_registar_nova_entrada"
    >
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_entrada"
            android:id="@+id/textView3"
            android:textSize="25sp"
             />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/just_data"
                android:id="@+id/textView8"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginRight="10dp"
                />
            <EditText
                android:ems="7"
                android:maxLines="1"
                android:inputType="date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/data_entrada"
                android:hint="@string/data_exemplo"
                android:gravity="center"
                />
        </LinearLayout>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/nome_prod"
            android:hint="@string/nome_produto"
            android:gravity="center"
            android:maxLines="1"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <EditText
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/custo"
                android:maxLines="1"
                android:hint="@string/custo_total"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="€"
                android:id="@+id/textView26"
                android:textSize="20dp" />
        </LinearLayout>

        <EditText
            android:ems="10"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fornecedor"
            android:hint="@string/nome_fornecedor"
            android:gravity="center"
             />

        <EditText
            android:ems="10"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fabricante"
            android:hint="@string/nome_fabricante"
            android:gravity="center"
             />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantidade"
                android:id="@+id/textView18"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginRight="10dp"
                />
            <EditText
                android:ems="5"
                android:maxLines="1"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantidade"
                android:hint="@string/hint_valor"
                android:gravity="center" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observacoes"
            android:id="@+id/textView6"
            android:textColor="#000000"
            android:gravity="center" />

        <EditText
            android:lines="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/observações"
            android:hint="@string/observacoes_entrada"
            android:gravity="center" />

        <Button
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submeter"
            android:id="@+id/submeter"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>