<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.diogo.fieldnote.RegistarNovaParcela"
    tools:showIn="@layout/activity_registar_nova_parcela"
    >
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_title"
            android:id="@+id/textView3"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zona"
                android:id="@+id/textView8"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginRight="10dp"
                />

            <Spinner
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:id="@+id/spinner"
                android:dropDownWidth="wrap_content" />
        </LinearLayout>


        <EditText

            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/pnome"
            android:hint="@string/nome_parcela"
            android:gravity="center" />

        <EditText
            android:ems="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pfertilizacao"
            android:hint="@string/fertilizacao"
            android:gravity="center"
             />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView

                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rega"
                android:id="@+id/textView13"
                android:layout_gravity="center" />

            <Spinner

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prega"
                android:hint="@string/rega"
                android:gravity="center"
                android:fitsSystemWindows="true"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:id="@+id/textView18"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="center"

                android:layout_marginRight="10dp"
                />
            <EditText
                android:ems="5"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/parea"
                android:hint="@string/hint_valor"
                android:gravity="center"
                 />
        </LinearLayout>


        <Button
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submeter"
            android:id="@+id/guardar"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
           />

    </LinearLayout>
</ScrollView>