<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.diogo.fieldnote.RegistarNovaZona"
    tools:showIn="@layout/activity_registar_nova_zona"
    >
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_zona"
            android:id="@+id/textView3"
            android:textSize="25sp"
             />

            <EditText
                android:layout_marginTop="20dp"
                android:ems="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/z_nome"
                android:hint="@string/nome_zona"
                android:gravity="center"
                 />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/z_local"
            android:hint="@string/localizacao"
            android:gravity="center"
             />

        <EditText
            android:ems="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/z_fito"
            android:hint="@string/fitossanidade"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modo_producao"
                android:id="@+id/textView17" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/z_modo"

                android:gravity="center"
                android:fitsSystemWindows="true"
                android:layout_marginLeft="5dp"
                 />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_solo"
                android:id="@+id/textView18" />
            <Spinner
                android:fitsSystemWindows="true"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/z_solo"

                android:gravity="center"
                />
        </LinearLayout>



        <Button
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submeter"
            android:id="@+id/zsubmeter"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
           />

    </LinearLayout>

</ScrollView>