<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.diogo.fieldnote.MostrarParcelaActivity"
    tools:showIn="@layout/activity_mostrar_parcela">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp">



        <TextView
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zona"
            android:id="@+id/textView2"
            android:textColor="#000000" />

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exemplo"
            android:textAlignment="center"
            android:id="@+id/par_zona"
            />

        <TextView
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fertilizacao"
            android:id="@+id/textView3"
            android:textColor="#000000" />

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exemplo"
            android:id="@+id/par_fert"
            />

        <TextView
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rega"
            android:id="@+id/textView5"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exemplo"
            android:id="@+id/par_rega" />

        <TextView
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:id="@+id/textView7"
            android:textColor="#000000" />

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exemplo"
            android:id="@+id/par_area"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">


            <TextView
                android:ems="7"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_plantacao"
                android:id="@+id/textView21"
                android:textColor="#FF464646"
                android:textSize="18sp"
                android:layout_alignParentTop="true" />
            <TextView

                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cultura"
                android:id="@+id/textView22"
                android:textColor="#464646"
                android:textSize="18sp"

                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/culturaView"
                android:layout_toEndOf="@+id/textView21" />

            <ListView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/datapView"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/textView21"

                android:layout_alignEnd="@+id/textView21" />

            <ListView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/culturaView"
                android:layout_gravity="center_horizontal"

                android:layout_toEndOf="@+id/datapView"
                android:layout_below="@+id/textView22" />


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
