<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/field1"

    tools:context="com.example.diogo.fieldnote.LoginActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <LinearLayout

                android:padding="25dp"
                android:id="@+id/email_login_form"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView

                    android:id="@+id/logotipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/logolimpo2" />



                    <AutoCompleteTextView
                        android:textSize="22sp"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:textColorHint="#494949"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"

                        />

                    <EditText
                        android:textColorHint="#494949"
                        android:textSize="22sp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                <Button
                    android:ems="6"
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:textSize="22sp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="#369901" />

                <TextView
                    android:ems="8"
                    android:textAlignment="center"
                    android:id="@+id/email_register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Criar Conta"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                     />

            </LinearLayout>
        </ScrollView>

</LinearLayout>
